terraform/sgrules.tf
resource "aws_security_group" "ec2" {
  name = "ec2-web-security-group-for-${var.env}"
  vpc_id      = "${var.vpc_id}"
  egress {
    protocol    = -1
    from_port   = 0
    to_port     = 0
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group_rule" "allow_elb_to_ec2s" {
  type            = "ingress"
  from_port       = 80
  to_port         = 80
  protocol        = "tcp"
  source_security_group_id = "${aws_security_group.elb.id}"
  security_group_id = "${aws_security_group.ec2.id}"
}

resource "aws_security_group" "elb" {
  name = "vibrato-elb-for-${var.env}"
  vpc_id      = "${var.vpc_id}"
  egress {
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port = 80
    to_port = 80
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
